--- a/view/penjualan.xml
+++ b/view/penjualan.xml
@@ -502,6 +502,7 @@
 							<field name="hppembelian"/>
 							<field name="pajak" />
 							<field name="netto" />
+							<field name="total_terbilang" invisible="1"/>
 							<field name="aturanakun" options="{'no_create': True, 'no_open':True}" attrs="{'readonly':[('disetujui','!=',False)]}"/>
 							<field name="akunotomatis" attrs="{'readonly':[('disetujui','!=',False)]}"/>
 							<field name="setlunas" attrs="{'readonly':[('disetujui','!=',False)]}"/>
