--- a/report/fakturpenjualanreport.xml
+++ b/report/fakturpenjualanreport.xml
@@ -11,10 +11,13 @@
        			 	<div class="page" style="font-family: Lucida Sans"> 
        			 		<t t-foreach="(len(penjualanfakturdetil)-1)/5+1" t-as="page">
 	            			<h2 style="margin-top:-6px;text-align: center">FAKTUR</h2>
-	                 		<p class="col-xs-4" style="font-size: 110%">
+	                 		<p class="col-xs-4" style="font-size: 100%">
 	                 			Tanggasl: <span t-field="o.tanggalterbit"/>  <br/>
 	                 			PO: <span t-field="o.idpenjualanpo.nomorpo"/> <br/>
-	                 			SJ: <span t-field="o.penjualansj.nomorsj"/> <br/> 
+	                 			SJ: <span t-field="o.penjualansj.nomorsj"/> <br/>
+	                 			<t t-if="o.idpenjualanpo.nomorpocustomer">
+	                 				PO Customer: <span t-field="o.idpenjualanpo.nomorpocustomer"/> <br/>
+	                 			</t>
 	                 		</p>
 	                 		<p class="col-xs-4" style="font-size: 127%;text-align: center">
 	                 			<b><span t-field="o.nomorfaktur"/></b><br/>
